# sideloop

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
charts/sideloop/: Chart.yaml  values.yaml
charts/sideloop/templates/: anisette.yaml  api.yaml  cronjob.yaml  httproute.yaml  pvc.yaml
src/sideloop/: __init__.py  api.py  config.py  models.py  refresh.py  signing.py  status.py  storage.py
src/sideloop/web/: index.html
tools/: pair-host-pve.py
tools/apple_auth/: README.md  dev_portal.py  devauth.py  grandslam-gsa.patch  gsa.py
tools/pve-install-agent/: README.md  install_agent.py  sideloop-install-agent.service  sideloop-install-agent.timer  sideloop-tunneld.service
